Fix XL cart alignment

--- a/src/scss/components/Button.scss
+++ b/src/scss/components/Button.scss
@@ -1,4 +1,6 @@
 .button {
+  transition: 0.3s $ease-out-cubic background;
+
   border-radius: 100px;
 
   &--black {
